# deep-learning-2nd

./: .gitignore  .gitmodules  README.md  common.h
breakout/: AIPlayer.cpp  AIPlayer.h  BoNet.cpp  BoNet.h  Breakout.cpp  Breakout.h  CMakeLists.txt  ConsoleGL.cpp  ConsoleGL.h  ConvDQNGameMain.cpp  Player.cpp  Player.h  README.md  RLMemory.h  ReinforcementLearning.h
breakout-unity/: README.md
breakout-unity/ui-src/Assets/: breakout-scene.unity
breakout-unity/ui-src/Assets/Materials/: Bouncy.physicMaterial  BreakParticleMat.mat  DeathParticleMat.mat  Green.mat  Red.mat  Water.mat
breakout-unity/ui-src/Assets/Prefabs/: BreakParticle.prefab  Bricks.prefab  DeathParticle.prefab  Paddle.prefab
breakout-unity/ui-src/Assets/Scripts/: Ball.cs  Bricks.cs  DeadZone.cs  GM.cs  Paddle.cs  TimedDestroy.cs
cnn/: CMakeLists.txt  ConvNN-main.cpp  Fake-Image-CNN-Model  README.md
multi-selfdrivingcar/: AICar.cpp  AICar.h  AutoCarNet.cpp  AutoCarNet.h  CMakeLists.txt  LineObj.h  Object.cpp  Object.h  Physics.h  README.md  Scene.cpp  Scene.h  SelfDrivingCarMain.cpp  SelfDrivingWorld.cpp  SelfDrivingWorld.h  SimpleFragmentShader.fragmentshader  SquareObj.cpp  SquareObj.h
python-tf/: README.md  cart_pole.py  frozenlake.py  nvidia_session_day1.py  q-learning-table.py
selfdrivingcar/: Agent.cpp  Agent.h  CMakeLists.txt  Car.cpp  Car.h  LineObj.h  Object.cpp  Object.h  RLMemory.h  ReinforcementLearning.cpp  ReinforcementLearning.h  SELF-DRIVING-CAR-MODEL  Scene.cpp  Scene.h  SelfDrivingCarMain.cpp  SimpleVertexShader.vertexshader  SquareObj.cpp  SquareObj.h  TestDrivingScene.cpp  TestDrivingScene.h  shader.cpp
share/: CMakeLists.txt  DQN.cpp  DQN.h  PEReplay.h  README.md  RLMemory.h  ReinforcementLearning.cpp  ReinforcementLearning.h  Replay.h  common.h
share/models/: breakoutnet.h  selfdrivingcarnet.h
xor-problem/: CMakeLists.txt  README.md  XOR-Problem-Main.cpp
